--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
     "rxjs-hooks": "^0.5.2",
-    "underscore": "^1.9.2"
+    "socket.io-client": "^2.3.0",
+    "underscore": "^1.9.2",
+    "use-socketio": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
