--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-json-view": "^1.19.1",
     "react-radio-group": "^3.0.3",
     "react-rangeslider": "^2.2.0",
+    "react-select": "^3.0.8",
     "react-timeseries-charts": "^0.16.1",
     "rxjs": "^6.5.4",
     "rxjs-compat": "^6.5.4",
