61-plugs-do_other_shit

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -25,6 +25,7 @@
   },	
 	"rules": {
 		"no-unsafe-finally": "off",
+		"no-func-assign": "off",
     "no-tabs": 1,
     "no-mixed-spaces-and-tabs": 1,
 		"import/named": 2,
